feat: added error handling, unit and integration tests
